@@ -322,6 +322,7 @@ class SusyNtTools
     float Mlljj(const Susy::Lepton* l1, const Susy::Lepton* l2,
                 const Susy::Jet* j1, const Susy::Jet* j2);
     float Mt(const Susy::Lepton* lep, const Susy::Met* met);
+    float Meff(const JetVector& jets, const Susy::Met* met);
     float Meff(const LeptonVector& leps, const JetVector& jets, const Susy::Met* met);
     float Meff(const LeptonVector& leps, const TauVector& taus, const JetVector& jets,
                const Susy::Met* met);
